feat: RTL с иницализацией методов и классов